--- a/Framework/test-output/old/Suite/reporter-output.html
+++ b/Framework/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,3 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Setting up reports and Test is getting ready</td></tr>
+<tr><td>Setting done - Test can be started </td></tr>
+</table>
